# wodox

./: CMakeLists.txt  README  README.md  TODO
data/: CMakeLists.txt
data/lang/en/: Makefile.in  howtoedit.txt  howtolink3.txt  howtoplay.txt
data/lang/es/: Makefile.in  actnames.txt  howtoedit.txt  howtolink4.txt  howtoplay.txt  levelnames.txt  menus.txt  messages.txt
data/lang/fr/: Makefile.in  howtolink2.txt  levelnames.txt  menus.txt
data/lang/it/: Makefile.in  actnames.txt  credits.txt  howtolink.txt  messages.txt
data/levels/: 3_18  again  all_together  ascension  bridge_building  cascade  descent  don_t_panic  doodle  fall_down  filler  glass_cage  going_down  going_up  hit_n_run  just_ahead  just_go  level.lst  make_a_way  modern_art  okay_now_panic  perspective  push_around  push_the_button  recovery  reverse_stack  riding_the_wave  round_we_go  run  sidestep  sideways  sokobany  step_by_step  symmetry  the_device  the_maze  the_spiral_race  timing_timing  tipped  warehouse  (+1 more)
data/sandbox/: Automation 1  Automation 2  Automation 3  Automation 4  Boss Alert!  Buu! Monster  Conveyor belts  Different Angle  Doodle  Electron-holes  High up  Impossible  Machine test 1  Machine test 2  Many boxes 1  Many boxes 2  Many boxes 3  Many boxes 4  Many boxes 5  Many boxes 6  Reverse stack  Simple  Sokoban 1  Testing limits  The Stack Trick  Uninteresting  Walking on boxes
src/: CMakeLists.txt  core.c  draw.c  draw.h  edit.c  edit.h  list.c  main.c  menu.c  menu.h  play.c  play.h  user.c
src/core/: CMakeLists.txt  core.c  core.h  lang.c  lang.h  list.h  user.c  user.h
src/edit/: CMakeLists.txt  circuit.c  circuit.h  edit.c  edit.h  edit_private.h  file.c  file.h  object.c  object.h  parse.c  parse.h  render.c  render.h  rotate.c  rotate.h  shift.c  shift.h  types.h
src/media/: CMakeLists.txt  draw.c  draw.h  media.c  media.h
src/menu/: CMakeLists.txt  menu.c  menu.h  menu_private.h  types.h
src/play/: CMakeLists.txt  circuit.c  circuit.h  input.c  input.h  load.c  load.h  object.c  object.h  play.c  play.h  state.c  (+7 more)
src/wodox/: CMakeLists.txt  main.c
