
install(DIRECTORY effects DESTINATION share/wodox)
install(DIRECTORY fonts DESTINATION share/wodox)
install(DIRECTORY lang DESTINATION share/wodox)
install(DIRECTORY levels DESTINATION share/wodox)
install(DIRECTORY music DESTINATION share/wodox)
install(DIRECTORY sandbox DESTINATION share/wodox)
install(DIRECTORY textures DESTINATION share/wodox)
